compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_annotation_wrong_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub const numbers: List(Int) = [1.1, 2.2, 3.3]"

---

error: Type mismatch
  ┌─ /src/one/two.gleam:1:32
  │
1 │ pub const numbers: List(Int) = [1.1, 2.2, 3.3]
  │                                ^^^^^^^^^^^^^^^

Expected type:

    List(Int)

Found type:

    List(Float)


